--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
 <body class="primaryfont">
     <header class="bg-gradient-to-t from-white to-gray-200">
       <nav class="container mx-auto">
-        <!-- Header Nav Area -->
-
-        <div class="navbar  ">
-          
+        <div class="navbar">
           <div class="navbar-start">
             <div class="">
               <a class="text-xl">
@@ -48,15 +45,14 @@
           </div>
           <div class="navbar-center hidden lg:flex">
               <ul class="menu menu-horizontal px-1">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="">Home</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Contact Us</a></li>
             </ul>
           </div>
       <div class="navbar-end ">
-          <!-- Button and search icon --> 
             <div class="hidden md:flex items-center justify-center gap-3">
                 <div class="">
                 <div class="flex items-center justify-center gap-3">
@@ -68,4 +64,88 @@
                       </span>
                 </div>
                 </div>
+                <div>
+                    <a class="btn rounded-3xl bg-primarycolor">
+                      Book Consult<i class="fa-solid fa-arrow-right bg-black  p-1 rounded-full -rotate-45 text-white"></i>
+                    </a>
+                  </div>
+              </div>
+  
+               <div class="dropdown">
+                <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="h-5 w-5"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor">
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M4 6h16M4 12h8m-8 6h16" />
+                  </svg>
+                </div>
+                <ul
+                  tabindex="0"
+                  class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow absolute right-1">
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Services</a></li>
+                  <li><a href="#">Portfolio</a></li>
+                  <li><a href="#">Blog</a></li>
+                  <li><a href="#">Contact Us</a></li>
+                </ul>
+              </div>
+             </div>
+          </div> 
+        </nav>
+        <section class="Hero-Area container mx-auto">
+            <div class="flex flex-col items-center ">
+              <div class="text-center">
+                <img src="./images/banner.png" alt="" class="w-2/3 lg:w-2/6 mx-auto">
+                <h1 class="font-bold lg:text-5xl text-[20px] px-1 primaryfont">A barn house of this design has a <br> striking appearance</h1>
+                <p class="lg:w-2/3 w-full px-3 mx-auto mt-5">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+
+                <button class="mt-4 md:w-2/12 w-3/4">
+                  <a class="btn rounded-3xl bg-primarycolor px-6 w-full">
+                  View Details <i class="fa-solid fa-arrow-right bg-black  p-1 rounded-full -rotate-45 text-white"></i>
+                  </a>
+              </button>
+              </div>
+            </div>
+        </section>
+        </header> 
 </body>
+<main>
+    <section class="about-us bg-gray-200 mt-20 pb-9" >
+        <div class="container mx-auto ">
+            <div class=" hidden lg:block px-2 py-4 ">
+              <img src="./images/Vector.png" alt="">
+            </div>
+          <div class="container mx-auto grid md:grid-cols-2 gap-5">
+            <div>
+              <button class=" mx-auto md:mx-0 px-4 py-1 font-bold bg-white rounded-3xl md:mt-0 mt-4 flex md:items-start items-center">
+                <a class="  ">
+                  <i class="fa-solid fa-arrow-right  rounded-full"></i> About Us </a>
+              </button>
+              <h1 class="font-bold md:text-[40px] text-4xl primaryfont mt-3 mx-4 md:mx-0 md:text-left text-center mb-3">We design thoughtful, <br>liveable spaces</h1>
+              <p class="text-xl font-semibold mx-4 md:mx-0 md:text-left text-center">The barn house captivates with its blend of rustic charm and 
+                modern sophistication, featuring weathered wood, sleek metal accents.</p>
+
+              <div class="flex items-center bg-white p-3 rounded-md  gap-4 md:mt-8 mt-4 mx-4 md:mx-0">
+                <div><img src="./images/commercial.png" alt=""></div>
+                <div>
+                  <h3 class="font-bold text-xl">Commercial</h3>
+                  <p class="">The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+              </div>
+
+              <div class="flex items-center bg-white p-3 rounded-md  gap-4 md:mt-8 mt-4 mx-4 md:mx-0">
+                <div><img src="./images/residential.png" alt=""></div>
+                <div>
+                  <h3 class="font-bold text-xl">Residential</h3>
+                  <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+              </div>
+           </div>
+</main>
