--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <section class="Hero-Area container mx-auto">
             <div class="flex flex-col items-center ">
               <div class="text-center">
-                <img src="./images/banner.png" alt="" class="w-2/3 lg:w-2/6 mx-auto">
+                <img src="images/banner.png" alt="" class="w-2/3 lg:w-2/6 mx-auto">
                 <h1 class="font-bold lg:text-5xl text-[20px] px-1 primaryfont">A barn house of this design has a <br> striking appearance</h1>
                 <p class="lg:w-2/3 w-full px-3 mx-auto mt-5">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
 
@@ -120,7 +120,7 @@
     <section class="about-us bg-gray-200 mt-20 pb-9" >
         <div class="container mx-auto ">
             <div class=" hidden lg:block px-2 py-4 ">
-              <img src="./images/Vector.png" alt="">
+              <img src="images/Vector.png" alt="">
             </div>
           <div class="container mx-auto grid md:grid-cols-2 gap-5">
             <div>
@@ -133,7 +133,7 @@
                 modern sophistication, featuring weathered wood, sleek metal accents.</p>
 
               <div class="flex items-center bg-white p-3 rounded-md  gap-4 md:mt-8 mt-4 mx-4 md:mx-0">
-                <div><img src="./images/commercial.png" alt=""></div>
+                <div><img src="images/commercial.png" alt=""></div>
                 <div>
                   <h3 class="font-bold text-xl">Commercial</h3>
                   <p class="">The barn house captivates with its blend of rustic charm and modern.</p>
@@ -141,11 +141,57 @@
               </div>
 
               <div class="flex items-center bg-white p-3 rounded-md  gap-4 md:mt-8 mt-4 mx-4 md:mx-0">
-                <div><img src="./images/residential.png" alt=""></div>
+                <div><img src="images/residential.png" alt=""></div>
                 <div>
                   <h3 class="font-bold text-xl">Residential</h3>
                   <p>The barn house captivates with its blend of rustic charm and modern.</p>
                 </div>
               </div>
            </div>
+           <div class="mx-4 md:mx-0">
+            <img src="images/Rectangle.png" alt="" class=" h-[400px] md:h-[500px] w-full" >
+        </div>
+      </div>
+      </div>
+  <section class="bg-gray-200 mt-20">
+      
+    <div class="container mx-auto ">
+        <div class="flex justify-center flex-col items-center mb-5">
+         <button class="px-4 py-1 font-bold bg-white rounded-3xl text-center ">
+           <a class="  ">
+             <i class="fa-solid fa-arrow-right  rounded-full"></i> How we works
+             </a>
+         </button>
+         <h1 class="font-bold md:text-[40px] text-4xl primaryfont mt-5 mx-4 md:mx-0  text-center mb-3">Our Works Process</h1>
+          <p class="text-xl font-semibold mx-4 md:mx-0  text-center md:w-2/3 ">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+        </div>
+        <div class="grid md:grid-cols-2 lg:grid-cols-4 grid-cols-1 gap-5">
+
+            <div class="p-6 bg- rounded-xl bg-[#E7C1D3] mx-3 md:mx-0 ">
+              <img src="images/concept.png" alt="">
+              <h2 class="font-bold text-xl py-2">Concept</h2>
+              <p>The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+
+            <div class="p-6 bg- rounded-xl bg-[#EFDA6E] mx-3 md:mx-0">
+              <img src="images/flow-chart.png" alt="">
+              <h2 class="font-bold text-xl py-2">Design Process</h2>
+              <p>The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+
+            <div class="p-6 bg- rounded-xl bg-[#A4DAC3] mx-3 md:mx-0">
+              <img src="images/vision.png" alt="">
+              <h2 class="font-bold text-xl py-2">Supervision</h2>
+              <p>The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+
+            <div class="p-6 bg- rounded-xl bg-[#77AAEA] mx-3 md:mx-0">
+              <img src="images/budget-planning.png" alt="">
+              <h2 class="font-bold text-xl py-2">Budget Planning</h2>
+              <p>The barn house captivates with its blend of rustic charm and modern.</p>
+            </div>
+        </div>
+    </div>
+</section>
+</section>
 </main>
