--- a/index.html
+++ b/index.html
@@ -194,4 +194,63 @@
     </div>
 </section>
 </section>
+<section class="container mx-auto my-20">
+    <div class="mt-20">
+      <div class="flex justify-center flex-col items-center mb-5">
+        <button class="px-4 py-1 font-bold bg-[#ABEF5F33] rounded-3xl text-center ">
+          <a class="  ">
+            <i class="fa-solid fa-arrow-right  rounded-full"></i> Explore our Latest works </a>
+        </button>
+        <h1 class="font-bold md:text-[40px] text-4xl primaryfont mt-5 mx-4 md:mx-0  text-center mb-3">Our Latest Portfolio</h1>
+         <p class="text-xl font-semibold mx-4 md:mx-0  text-center md:w-2/3 ">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+       </div>
+    </div>
+    <div class="md:flex gap-2 pb-5 ">
+      <div class="md:flex rounded-md border justify-center items-center md:flex-1 md:p-5 mx-auto px-5">
+          <div class="">
+            <img src="images/img1.png" alt="" class="mx-auto w-full my-4 md:my-0">
+          </div>
+          <div class="md:px-5 pb-5 md:pb-0">
+            <h1 class="font-bold text-xl mb-3">Commercial</h1>
+            <p>The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+            <button class=" py-1 font-bold bg-white rounded-3xl text-center mt-3 ">
+              <a class="">
+                View Details   
+                <i class="fa-solid fa-arrow-right  rounded-full md:p-1 -rotate-45 bg-[#ABEF5F] ml-1"></i>
+                </a>
+            </button>
+          </div>
+      </div>
+      <div class="rounded-md border  md:p-3 mx-auto px-5 mt-5 md:mt-0">
+          <img src="images/img2.png" alt="" class="w-full md:w-auto md:h-full py-1">
+      </div>
+   </div>
+        <div class="md:flex gap-4 md:flex-row flex flex-col-reverse ">
+          <div class="rounded-md border  md:p-3 mx-auto px-5 mt-5 md:mt-0 w-full md:w-auto">
+            <img src="images/img3.png" alt="" class="w-full mx-auto md:w-auto md:h-full py-1 md:my-0">
+          </div>
+          <div class="md:flex rounded-md border justify-center items-center  md:p-1 mx-auto px-5 md:px-1">
+          <div class="">
+                  <img src="images/img4.png" alt="" class="mx-auto w-full my-4 md:my-0 ">
+                </div>
+<div class="md:px-5 pb-5 md:pb-0">
+                <h1 class="font-bold text-xl mb-3">Commercial</h1>
+                <p>The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                <button class=" py-1 font-bold bg-white rounded-3xl text-center mt-3 ">
+                  <a class="">
+                    View Details   
+                    <i class="fa-solid fa-arrow-right  rounded-full md:p-1 -rotate-45 bg-[#ABEF5F] ml-1"></i>
+                    </a>
+                </button>
+              </div>
+            </div>
+            <div class="rounded-md border  md:p-3 mx-auto px-5 mt-5 md:mt-0 w-full md:w-auto">
+              <img src="images/img5.png" alt="" class="w-full mx-auto md:w-auto md:h-full py-1 md:my-0">
+            </div>
+        </div>
+        <div class="rounded-md border  md:p-3 mx-auto px-5 mt-5 md:mt-0 w-full md:w-auto md:hidden">
+          <img src="images/img5.png" alt="" class="w-full mx-auto md:w-auto md:h-full py-1 md:my-0">
+        </div>
+  </section>
+
 </main>
