Added contact section

--- a/index.html
+++ b/index.html
@@ -252,5 +252,16 @@
           <img src="images/img5.png" alt="" class="w-full mx-auto md:w-auto md:h-full py-1 md:my-0">
         </div>
   </section>
+  <section id="contact" class="bg-[url('./images/bg.jpg')] bg-no-repeat bg-cover bg-center">
+  <div class="container mx-auto md:w-8/12 py-10 md:py-20">
+      <div class="flex justify-center flex-col items-center">
+        <button class="px-4 py-1 font-bold bg-[#ABEF5F33] rounded-3xl text-center ">
+          <a class="  ">
+            <i class="fa-solid fa-arrow-right  rounded-full"></i> Let’s Connect
+            </a>
+        </button>
+        <h1 class="font-bold md:text-[40px] text-4xl primaryfont mt-5 mx-4 md:mx-0  text-center mb-3">Let’s Discuss Next Project</h1>
+        <p class="text-xl font-semibold md:mx-0  text-center md:w-2/3 mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+      </div>
 
 </main>
