Added contact name section

--- a/index.html
+++ b/index.html
@@ -263,5 +263,38 @@
         <h1 class="font-bold md:text-[40px] text-4xl primaryfont mt-5 mx-4 md:mx-0  text-center mb-3">Let’s Discuss Next Project</h1>
         <p class="text-xl font-semibold md:mx-0  text-center md:w-2/3 mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
       </div>
-
+      
+<div>
+    <form action="">
+        <div class="grid grid-cols-1 md:grid-cols-2 md:gap-4 mx-5 md:mx-0">
+        <label for="Frist Name" >
+        <input type="text" placeholder="First Name*" class="p-4 mt-5 block w-full rounded-2xl border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" required>
+        </label>
+ <label for="Last Name">
+            <input type="text" placeholder="Last Name*" class="p-4 mt-5 block w-full rounded-2xl border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" required>
+          </label>
+          </div>
+          <div class="grid grid-cols-1 md:grid-cols-2 md:gap-4 mx-5 md:mx-0">
+            <label for="">
+              <input type="text" placeholder="Phone Number" class="p-4 mt-5 block w-full rounded-2xl border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" required>
+            </label>
+            <label for="">
+              <input type="text" placeholder="Email Number*" class="p-4 mt-5 block w-full rounded-2xl border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" required>
+            </label>
+          </div>
+          <div class="mx-5 md:mx-0">
+            <label for="Write your message here " class=""> 
+              <textarea name="" id="" rows="4" cols="45" placeholder="Write your message here"  class="p-4 mt-5 block w-full rounded-2xl border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm " required></textarea>
+              </label>
+    <button type="submit"
+            class="my-4 w-full bg-primarycolor text-white py-2 px-4 rounded-full focus:outline-none ">
+            <a class="text-black font-bold"> Send Mail
+                          <i class="fa-solid fa-arrow-right bg-black  p-1 rounded-full -rotate-45 text-white"></i>
+                        </a>
+    </button>
+    </div>
+</form>
+</div>
+ </div>
+</section>
 </main>
