Added footer section

--- a/index.html
+++ b/index.html
@@ -298,3 +298,31 @@
  </div>
 </section>
 </main>
+<footer class="bg-[#1C1C1C]">
+    <div class="container mx-auto flex flex-col justify-center items-center text-white gap-4 py-10">
+         <div class="mx-auto flex flex-col justify-center items-center gap-4 ">
+          <a class="text-[32px] ">
+            <i class="fa-solid fa-arrow-right bg-primarycolor p-1 rounded-full -rotate-45 text-black"></i>
+            <h1 class="font-bold inline">Rinterio</h1>
+          </a>
+          <p class="text-sm font-semibold md:mx-0  text-center md:w-2/3 mx-2">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+         </div>
+         <div class="md:my-5">
+            <ul class="md:flex md:gap-10 text-center">
+              <li class="py-2"><a href="#">Home</a></li>
+              <li class="py-2"><a href="#">Services</a></li>
+              <li class="py-2"><a href="#">Portfolio</a></li>
+              <li class="py-2"><a href="#">Blog</a></li>
+              <li class="py-2"><a href="#">Contact Us</a></li>
+            </ul>
+        </div>
+        <div>
+          <a class="btn rounded-3xl bg-primarycolor">
+            Book Consult<i class="fa-solid fa-arrow-right bg-black  p-1 rounded-full -rotate-45 text-white"></i>
+          </a>
+        </div>
+
+    </div>
+</footer>
+</body>
+</html>
